@@ -41,13 +41,13 @@ class cdnboxDNSserver extends EventEmitter {
     var self = new cdnboxDNSserver(protocol);
     self.socket = dgram.createSocket(protocol);
     self.socket.on('message', function(msg, remote) {
-      var buff = self.handleMessage(msg, remote);
-      if (buff !== null) {
-        if (remote.port !== 0) {
+      if (remote.port !== 0) {
+        var buff = self.handleMessage(msg, remote);
+        if (buff !== null) {
           self.socket.send(buff, 0, buff.length, remote.port, remote.address);
-        } else {
-          cdnboxStates.logerror('"error": "Discarding DNS remote port 0 for ' + remote.address + '"');
         }
+      } else {
+        cdnboxStates.logerror('"error": "Discarding DNS remote port 0 for ' + remote.address + '"');
       }
     });
     self.socket.on('listening', function() {
@@ -158,7 +158,7 @@ class cdnboxDNSserver extends EventEmitter {
       return dnspacket.getbuff();
     } catch (err) {
       console.error(err);
-      console.error("MSG:", JSON.stringify(msg));
+      console.error("MSG: " + remoteaddress.address, JSON.stringify(msg));
       return null;
     }
   }
