@@ -26,6 +26,7 @@ const maxmind = require('maxmind');
 const countryLookup = maxmind.openSync('./GeoLite2-Country.mmdb');
 
 const cdnboxStates = require('./cdnboxStates.js');
+const cdnboxMetrics = require('./cdnboxMetrics.js');
 
 const image1x1 = Buffer.from([
     0x47, 0x49, 0x46, 0x38, 0x39, 0x61, 0x01, 0x00, 0x01, 0x00, 
@@ -453,19 +454,11 @@ async function cdnbox_status(req,res) {
       '}');
     }
     if (cdnboxStates.local.config.varnishmetrics && cdnboxStates.config.varnishmetricsoutput === "status") {
-      cdnboxStates.getvarnishmetrics().then(function (buff) {
-        res.write(buff + '}');
-        res.end();
-      }, function () {
-        res.write('}');
-        res.end();
-      })
-    } else {
-      res.write('}');
-      res.end();
+      res.write(await cdnboxMetrics.getvarnishmetrics(cdnboxStates));
     }
+    res.end('}');
   } catch (e) {
-    console.error(e);
+    console.error('http:' + e);
     res.end('');
   }
 }
