@@ -19,6 +19,7 @@
 // THE SOFTWARE
 
 'use strict';
+const childProcess = require('child_process');
 
 var cdnboxMetrics = module.exports = {};
 
@@ -45,5 +46,52 @@ cdnboxMetrics.eventloop = function (el) {
   if (delta > el.max) el.max = delta;
   el.memotime = lasttime;
   setTimeout(cdnboxMetrics.eventloop, 5, el);
+}
+
+cdnboxMetrics.getvarnishmetrics = function(cdnboxStates) {
+  return new Promise((resolve, reject) => {
+    var child = childProcess.execFile('varnishstat', ['-j', '-1'], (error, stdout, stderr) => {
+      if (error) {
+        console.error(error);
+        cdnboxStates.logerror('"error": "varnishmetrics: ' + error.toString().replace(/"|\n/g,'') +
+		              ' on ' + cdnboxStates.local.config.name + '"');
+	resolve(',"error": "varnishmetrics error. See error log."');
+      } else {
+        var i,
+	    vconf = cdnboxStates.config.varnishmetrics,
+            vconf_keys = Object.keys(vconf);
+        try {
+          var vstat = JSON.parse(stdout), buff = '', currenttime = Date.now();
+          if (vstat.counters !== undefined) { vstat = vstat.counters; }
+          var delta = (currenttime - (cdnboxStates.varnishmetrics.lasttime?cdnboxStates.varnishmetrics.lasttime:0)) / 1000;
+          cdnboxStates.varnishmetrics.lasttime = currenttime;
+          for (i = 0; i < vconf_keys.length; i++) {
+            if (vstat[vconf[vconf_keys[i]]]) {
+              switch (vstat[vconf[vconf_keys[i]]].flag) {
+                case 'c':
+                  if (cdnboxStates.varnishmetrics[vconf_keys[i]] !== undefined &&
+		      cdnboxStates.varnishmetrics[vconf_keys[i]] <= vstat[vconf[vconf_keys[i]]].value) {
+                    buff += ',"' + vconf_keys[i] + '": ' +
+                        Math.round((vstat[vconf[vconf_keys[i]]].value - cdnboxStates.varnishmetrics[vconf_keys[i]]) / delta); 
+                  }
+                  cdnboxStates.varnishmetrics[vconf_keys[i]] = vstat[vconf[vconf_keys[i]]].value;
+                  break;
+                case 'g':
+                  buff += ',"' + vconf_keys[i] + '": ' + vstat[vconf[vconf_keys[i]]].value; 
+              }
+            } else {
+              buff += ',"' + vconf_keys[i] + '": -1';
+            }
+          }
+	  resolve(buff);
+        } catch (err) {
+          console.error(err);
+          cdnboxStates.logerror('"error": "varnishmetrics: ' + err.message + 'on ' + vconf[vconf_keys[i]] +
+		   ' on ' + cdnboxStates.local.config.name + '"');
+	  resolve(',"error": "varnishmetrics error. See error log."');
+        }
+      }
+    });
+  })
 }
 
