@@ -80,7 +80,7 @@ class cdnboxDNSPacket {
         index += count;
       }
       index++;
-      if (index >= msg.length) { break; }
+      if (index + 9 >= msg.length) { break; }
       var rdlength = msg.readUInt16BE(index + 8);
       // EDNS packet
       if (msg.readUInt16BE(index) === cdnboxDNSPacket.QTYPE.OPT) {
