@@ -31,7 +31,7 @@ const nodemailer = require('nodemailer');
 
 const cdnboxMetrics = require('./cdnboxMetrics.js');
 
-var cdnboxStates = module.exports = { };
+var cdnboxStates = module.exports = {};
 
 cdnboxStates.starttime = Date.now();
 
@@ -100,6 +100,7 @@ cdnboxStates.loadconfig = function () {
   });
   if (lconfig.states === undefined) { lconfig.states = { "penalgdown": 120 }; } 
   if (lconfig.clustersecret === undefined) { lconfig.clustersecret = lconfig.httpserver.authorization; }
+  if (lconfig.varnishmetrics !== undefined) { cdnboxStates.varnishmetrics = {}; }
   if (lconfig.varnishmetricsoutput === undefined) { lconfig.varnishmetricsoutput = "log"; }
 }
 
@@ -638,17 +639,17 @@ function writetlsticketkeys() {
   });
 }
 
-function testCDNBoxes() {
+async function testCDNBoxes() {
   if (cdnboxStates.local.config.name === undefined) { throw "Local CDNBox not detected."; }
   cdnboxStates.penalbucket.get();
   cdnboxStates.config.cdnboxes.forEach(function(cdnbox) { getPerf(cdnbox); });
   // localtests
   if (cdnboxStates.local.config.localtests) dolocaltests(cdnboxStates.local);
   // get metrics
-  if (cdnboxStates.local.config.varnishmetrics && cdnboxStates.config.varnishmetricsoutput === "log") {
-    cdnboxStates.getvarnishmetrics();
-  }
   console.log(' "type":"memory",' + JSON.stringify(process.memoryUsage()).replace(/[{}]/g, ''));
+  if (cdnboxStates.local.config.varnishmetrics && cdnboxStates.config.varnishmetricsoutput === "log") {
+    console.log('"type":"varnish"' + await cdnboxMetrics.getvarnishmetrics(cdnboxStates));
+  }
 }
 
 function dolocaltests(cdnboxState) {
@@ -684,53 +685,6 @@ function dolocaltests(cdnboxState) {
     }(cdnboxState, req, localtest))
     .end();
   }
-}
-
-cdnboxStates.getvarnishmetrics = function() {
-  if (cdnboxStates.varnishmetrics === undefined) { cdnboxStates.varnishmetrics = {}; }
-  return new Promise((resolve, reject) => {
-    var child = childProcess.execFile('varnishstat', ['-j', '-1'], (error, stdout, stderr) => {
-      if (error) {
-        console.error(error);
-        reject(error);
-      } else {
-        var i,
-	    vconf = cdnboxStates.config.varnishmetrics,
-            vconf_keys = Object.keys(vconf);
-        try {
-          var vstat = JSON.parse(stdout), buff = '', currenttime = Date.now();
-          if (vstat.counters !== undefined) { vstat = vstat.counters; }
-          var delta = (currenttime - (cdnboxStates.varnishmetrics.lasttime?cdnboxStates.varnishmetrics.lasttime:0)) / 1000;
-          cdnboxStates.varnishmetrics.lasttime = currenttime;
-          for (i = 0; i < vconf_keys.length; i++) {
-            if (vstat[vconf[vconf_keys[i]]]) {
-              switch (vstat[vconf[vconf_keys[i]]].flag) {
-                case 'c':
-                  if (cdnboxStates.varnishmetrics[vconf_keys[i]] !== undefined &&
-		      cdnboxStates.varnishmetrics[vconf_keys[i]] <= vstat[vconf[vconf_keys[i]]].value) {
-                    buff += ',"' + vconf_keys[i] + '": ' +
-                        Math.round((vstat[vconf[vconf_keys[i]]].value - cdnboxStates.varnishmetrics[vconf_keys[i]]) / delta); 
-                  }
-                  cdnboxStates.varnishmetrics[vconf_keys[i]] = vstat[vconf[vconf_keys[i]]].value;
-                  break;
-                case 'g':
-                  buff += ',"' + vconf_keys[i] + '": ' + vstat[vconf[vconf_keys[i]]].value; 
-              }
-            } else {
-              buff += ',"' + vconf_keys[i] + '": -1';
-            }
-          }
-          console.log('"type":"varnish"' + buff);
-	  resolve(buff);
-        } catch (err) {
-          console.error(err);
-          logerror('"error": "varnishmetrics: ' + err.message + 'on ' + vconf[vconf_keys[i]] +
-		   ' on ' + cdnboxStates.local.config.name + '"');
-	  reject(err);
-        }
-      }
-    });
-  })
 }
 
 // initializing mailer
