@@ -1,5 +1,8 @@
 
-* 1607800587
+* 1608033183
+ - refactoring varnishmetrics
+ - fix RangeError in cdnboxPacket.js:84:26
+* 1607776777
  - discard DNS packet with remote port 0
 * 1604744266
  - Optimize crypto tlsticket
